--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,18 @@
-// {
-//   "plugins": ["unused-imports"],
-//   "rules": {
-//     "no-unused-vars": "off",
-//     "unused-imports/no-unused-imports": "error",
-//     "unused-imports/no-unused-vars": [
-//       "warn",
-//       {
-//         "vars": "all",
-//         "varsIgnorePattern": "^_",
-//         "args": "after-used",
-//         "argsIgnorePattern": "^_"
-//       }
-//     ]
-//   }
-// }
-
 {
-  "extends": "next/core-web-vitals"
+  "plugins": ["unused-imports"],
+  "extends": "next/core-web-vitals",
+  "rules": {
+    "no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "error",
+    "@typescript-eslint/no-unused-vars": "off",
+    "unused-imports/no-unused-vars": [
+      "warn",
+      {
+        "vars": "all",
+        "varsIgnorePattern": "^_",
+        "args": "after-used",
+        "argsIgnorePattern": "^_"
+      }
+    ]
+  }
 }
