--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "date-fns": "^3.6.0",
     "embla-carousel-autoplay": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
+    "eslint-plugin-react-hooks": "^5.2.0-canary-cabd8a0e-20250113",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.447.0",
     "motion": "^11.13.3",
     "next": "14.2.14",
+    "next-svgr": "^0.0.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
