--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,8 @@
 {
-  "plugins": ["unused-imports"],
   "extends": "next/core-web-vitals",
   "rules": {
-    "no-unused-vars": "off",
+    "react/react-in-jsx-scope": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "unused-imports/no-unused-vars": [
-      "warn",
-      {
-        "vars": "all",
-        "varsIgnorePattern": "^_",
-        "args": "after-used",
-        "argsIgnorePattern": "^_"
-      }
-    ]
+
   }
 }
