--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,6 @@
   "extends": "next/core-web-vitals",
   "rules": {
     "react/react-in-jsx-scope": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
