--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "embla-carousel-react": "^8.3.0",
     "eslint-plugin-react-hooks": "^5.2.0-canary-cabd8a0e-20250113",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.2",
+    "i18next-resources-to-backend": "^1.2.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.447.0",
     "motion": "^11.13.3",
@@ -43,6 +46,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-share": "^5.1.0",
@@ -54,6 +58,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/leaflet": "^1.9.12",
+    "@types/navermaps": "^3.7.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
