--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.2.14",
     "next-svgr": "^0.0.2",
     "next-themes": "^0.3.0",
+    "plaiceholder": "^3.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -51,6 +52,7 @@
     "react-leaflet": "^4.2.1",
     "react-share": "^5.1.0",
     "rss": "^1.2.2",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.5.3",
     "use-debounce": "^10.0.4",
     "zod": "^3.23.8"
