--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@next/third-parties": "^15.2.1",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
